# CompilerPJ

./: .gitignore  LICENSE  README.md  fixed-pcat-rules.txt  签到表.xls  编译原理上机教程.pptx  编译名单-颜波2019.xls
PJ/: CMakeLists.txt  readme.md
PJ/lexical_analysis/: CMakeLists.txt  main.cpp
PJ/lexical_analysis/include/: lexAnalyzer.h  lexer.h
PJ/lexical_analysis/src/: lexAnalyzer.cpp  lexer.lex
PJ/tests/: test01.pcat  test02.pcat  test03.pcat  test07.pcat  test08.pcat  test12.pcat  test16.pcat
PJ1_demo/: Makefile  demo.cpp  demo.h  demo.lex  lexer.h  lexer.lex  main.cpp
PJ2_demo/: Makefile  head_token.txt  lex.lex  main.cpp  parser.y  readme.md  test.sh  tree.cpp  tree.h
outputs/: test01.txt  test02.txt  test03.txt  test05.txt  test07.txt  test08.txt  test12.txt  test15.txt  test16.txt  test17.txt  test19.txt
results1/: test01.res  test02.res  test03.res  test05.res  test07.res  test08.res  test12.res  test15.res  test16.res  test17.res  test19.res  test20.res
results2/: result08.html
tests/: test05.pcat  test07.pcat  test15.pcat  test17.pcat  test19.pcat  test20.pcat  test_error.pcat
